--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -1,7 +1,7 @@
 
 <mjml>
   <mj-head>
-    <mj-title>JPO du 21 juin 2025 Ecosup Hôtellerie</mj-title>
+    <mj-title>JPO du 21 juin 2025 Ecosup Immobilier</mj-title>
     <mj-font name="Roboto" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&amp;display=swap"></mj-font>
     <mj-font name="fontAwesome" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
     <mj-raw>
@@ -25,16 +25,16 @@
       <mj-class name="T13-700" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="700"/>
       <mj-class name="T13-400" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="400"/>
       <mj-class name="T10-300" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="10px" line-height="12px" font-weight="300"/>
-      <mj-button border="2px solid #C21718" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#C21718"></mj-button>
+      <mj-button border="2px solid #EC6608" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#EC6608"></mj-button>
       <mj-class name="cT1" color="#1a1a1a"/>
       <mj-class name="cT0" color="#4d4d4d"/>
-      <mj-class name="cT2" color="#999999"/>
+      <mj-class name="cT2" color="#999999"></mj-class>
       <mj-class name="cTW" color="#ffffff"/>
       <mj-class name="bgW" background-color="#ffffff"/>
-      <mj-class name="c0" color="#C21718"/>
-      <mj-class name="bg0" background-color="#C21718"/>
-      <mj-class name="c1" color="#74151E"/>
-      <mj-class name="bg1" background-color="#74151E"/>
+      <mj-class name="c0" color="#EC6608"/>
+      <mj-class name="bg0" background-color="#EC6608"/>
+      <mj-class name="c1" color="#AA3E17"/>
+      <mj-class name="bg1" background-color="#AA3E17"/>
     </mj-attributes>
     <mj-breakpoint width="420px"></mj-breakpoint>
   </mj-head>
@@ -46,7 +46,7 @@
     </mj-section>
     <mj-section padding="20px">
       <mj-column>
-        <mj-image padding="0" width="153px" src="https://i.ibb.co/ZGht1kv/logo-EHotellerie.png" alt="logo Ecosup Hôtellerie"/>
+        <mj-image padding="0" width="153px" src="https://i.ibb.co/TqgzjgC3/ecosup-Immobilier.png" alt="logo Ecosup Immobilier"/>
       </mj-column>
     </mj-section>
     <mj-section padding="0" mj-class="bg0">
@@ -57,13 +57,13 @@
     <mj-section padding="0" mj-class="bg0">
       <mj-group width="100%">
         <mj-column width="50%">
-          <mj-image padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="Groupe d'étudiants"/>
+          <mj-image padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="Groupe d'étudiant"/>
         </mj-column>
         <mj-column width="25%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/vxXhw6vZ/hot4.jpg" alt="Explication du travail par le manager"/>
+          <mj-image padding="0" width="150px" src="https://i.ibb.co/pB6RBFP0/imo1.jpg" alt="Clé d'acquisition de la maison"/>
         </mj-column>
         <mj-column width="25%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/Sw5D1h4s/jpo-Hot-Img21062025.jpg" alt="Travail en cuisine"/>
+          <mj-image padding="0" width="150px" src="https://i.ibb.co/PvXWxt3P/jpo-Immo-Img21062025.jpg" alt="Négociation immobilière"/>
         </mj-column>
       </mj-group>
       <mj-column mj-class="bg0" width="100%">
@@ -74,14 +74,11 @@
       <mj-column width="88%">
         <mj-text padding="5px 10px" padding-bottom="0" mj-class="T36-300 c0" letter-spacing="1px"><span style="font-weight:900;">Parcoursup</span> ne vous a pas donné de réponse positive&nbsp;?</mj-text>
         <mj-text padding="5px 10px" padding-top="0" mj-class="T36-900 c0" letter-spacing="1px">Rassurez-vous, tout est encore possible</mj-text>
-        <mj-text padding="10px" mj-class="T16-400 cT0">Les résultats tombés il y a quelques jours ont peut-être été une déception... mais ils ne remettent pas en cause votre avenir. Il existe d'autres voies, concrètes et accessibles, pour construire un projet solide dans des secteurs passionnants : <span style="font-weight:700;color:#1a1a1a;">l'hôtellerie et la restauration</span>. </mj-text>
-        <mj-text padding="10px" padding-bottom="0" mj-class="T16-400 cT0">Vous vous intéressez à l'hôtellerie, à la gastronomie, à l'organisation de séjours ou à l'art de l'accueil et du service&nbsp;? Venez découvrir nos formations en </mj-text>
-        <mj-text padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0"><span style="color:#C21718;">&#x25CF;</span> <span style="font-weight:700;color:#1a1a1a;">BTS</span> Management de l'Hôtellerie Restauration, </mj-text>
-        <mj-text padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0"><span style="color:#C21718;">&#x25CF;</span> <span style="font-weight:700;color:#1a1a1a;">Bachelor</span> Responsable Commercial en Hôtellerie, </mj-text>
-        <mj-text padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0"><span style="color:#C21718;">&#x25CF;</span> <span style="font-weight:700;color:#1a1a1a;">Mastère</span> Manager des Organisations en Hôtellerie, </mj-text>
-        <mj-text padding="10px" padding-top="0" mj-class="T16-400 cT0">à l'occasion de notre <span style="font-weight:700;color:#1a1a1a;">dernière Journée Portes Ouvertes de l'année</span>.</mj-text>
+        <mj-text padding="10px" mj-class="T16-400 cT0">Les résultats tombés il y a quelques jours ont peut-être été une déception... mais ils ne remettent pas en cause votre avenir. Il existe d'autres voies, concrètes et accessibles, pour construire un projet solide dans un secteur passionnant : <span style="font-weight:700;color:#1a1a1a;">l'immobilier</span>.</mj-text>
+        <mj-text padding="10px" padding-bottom="0" mj-class="T16-400 cT0">Vous vous intéressez à l'immobilier, à la valorisation des biens, à l'analyse du marché ou à la négociation de transactions&nbsp;? Venez découvrir notre formation</mj-text>
+        <mj-text padding="10px" padding-top="0" padding-left="20px" mj-class="T16-400 cT0"><span style="color:#EC6608;">&#x25CF;</span> <span style="font-weight:700;color:#1a1a1a;">BTS</span> Professions Immobilières</mj-text>
         <mj-text padding="5px 10px" mj-class="T16-400 cT0"><img align="left" width="60px" src="" alt=""/>
-          <div style="font-weight:700;padding-left:70px;color:#C21718;">Samedi 21 juin 2025 de&nbsp;9h30&nbsp;à&nbsp;13h</div>
+          <div style="font-weight:700;padding-left:70px;color:#EC6608;">Samedi 21 juin 2025 de&nbsp;9h30&nbsp;à&nbsp;13h</div>
           <div style="padding-left:70px;font-family:Roboto,Arial,Helvetica,sans-serif;font-style:normal;font-size:13px;line-height:17px;font-weight:400;"><strong>Ecosup Campus</strong> 17 rue des Ursulines - Tourcoing</div>
         </mj-text>
         <mj-text padding="10px" mj-class="T16-400 cT0">Chez <span style="font-weight:700;color:#1a1a1a;">Ecosup Campus</span>, nous croyons avant tout à l'échange, à l'écoute et à la rencontre. Ici, <span style="font-weight:700;color:#1a1a1a;">ce n'est pas un algorithme ni un dossier impersonnel qui décide de votre avenir</span>, mais un vrai dialogue, humain et bienveillant, avec chaque candidat.</mj-text>
@@ -92,12 +89,12 @@
     <mj-section mj-class="bgW" padding="0 30px 20px 20px">
       <mj-group>
         <mj-column width="80%" vertical-align="bottom">   
-          <mj-text align="right" padding="0px 10px" mj-class="T13-700 cT1">Hélène Salmon</mj-text>
-          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Responsable des études</mj-text>
-          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Ecosup Hôtellerie</mj-text>
+          <mj-text align="right" padding="0px 10px" mj-class="T13-700 cT1">Clément Duhamel</mj-text>
+          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Responsable pédagogique</mj-text>
+          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Ecosup Immobilier</mj-text>
         </mj-column>
         <mj-column width="20%"> 
-          <mj-image padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/nNn2KVYL/Helene21062025.jpg" alt="Hélène Salmon, responsable des études hôtellerie"/>
+          <mj-image padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/twBy3v1L/Clement21062025.jpg" alt="Clément Duhamel, responsable pédagogique immobilier"/>
         </mj-column>
       </mj-group>
     </mj-section>
@@ -124,91 +121,22 @@
     </mj-wrapper>
     <mj-section mj-class="bg1" padding="0 20px">
       <mj-column>
-        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="https://ecosup-hotellerie.fr" target="_blank">www.ecosup-hotellerie.fr</a></mj-text>
+        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="https://ecosup-commerce.fr/bts-professions-immobilieres/" target="_blank">www.ecosup-immobilier.fr</a></mj-text>
       </mj-column>
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/jkmfByQp/icon-Hot062025.png" alt="icon cinq étoiles"/>
-      </mj-column>
-      <mj-column width="80%">   
-        <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en initial</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#C21718;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">MAN</span> Mise à Niveau Hôtellerie Restauration</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">1 an</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Le Plus : <span style="font-weight:700;color:#1a1a1a;">Bourse Ecosup</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Formation initiale ou continue. Financement possible grâce à la mobilisation du CPF ou autres organismes extérieurs.</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="0">
-      <mj-column>
-        <mj-spacer height="10px"></mj-spacer>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="20px" background-color="#e6e6e6">
-      <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/jkmfByQp/icon-Hot062025.png" alt="icon hôtel cinq étoiles"/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/x8cRbcM9/icon-Immo062025.png" alt="icon clé de maison"/>
       </mj-column>
       <mj-column width="80%">
         <mj-spacer height="20px"></mj-spacer>
         <mj-text align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#C21718;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">BTS</span> Management de l'Hôtellerie - Restauration</mj-text>
+        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#EC6608;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">BTS</span> Professions immobilières</mj-text>
         <mj-text align="left" padding="0px 15px" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
         <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">2 ans</span>,</mj-text>
         <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Le Plus : <span style="font-weight:700;color:#1a1a1a;">Diplôme reconnue par l'État</span>,</mj-text>
-        <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="0">
-      <mj-column>
-        <mj-spacer height="10px"></mj-spacer>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="20px" background-color="#e6e6e6">
-      <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/jkmfByQp/icon-Hot062025.png" alt="icon hôtel cinq étoiles"/>
-      </mj-column>
-      <mj-column width="80%">
-        <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#c21718;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">Bachelor</span> Responsable commercial en Hôtellerie</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Post-Bac+2,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">1 an</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Le Plus : <span style="font-weight:700;color:#1a1a1a;">Travel Week</span>, semaine immersive en mobilité internationale,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="0">
-      <mj-column>
-        <mj-spacer height="10px"></mj-spacer>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="20px" background-color="#e6e6e6">
-      <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/jkmfByQp/icon-Hot062025.png" alt="icon hôtel cinq étoiles"/>
-      </mj-column>
-      <mj-column width="80%">
-        <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#C21718;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">Mastère</span> Manager des Organisations en Hôtellerie</mj-text>
-        <mj-text padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Post-Bac+3,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">2 ans</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Le Plus : <span style="font-weight:700;color:#1a1a1a;">Double certification internationale</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
       </mj-column>
     </mj-section>
